# conclave-sim

./: .gitignore  README.md  TODO.txt  analysis.md  config.yaml  discussion_round.py  me.txt  proposed_prompts.yaml  pyproject.toml  requirements.txt  test_discussion_participation.py  test_discussion_prompt.py  test_fixes.py
agents/: base.py
analysis/: conclave_analysis_new.ipynb  enhanced_prompt_implementation_summary.md  parameter_analysis.ipynb  prompt_optimization_final.md  sensitivity_analysis.ipynb  special_analysis.ipynb
conclave/: __init__.py
config/: __init__.py  agent.yaml  groups.yaml  output.yaml  simulation.yaml  testing_groups.yaml
data/: cardinal_electors_2025.csv  cardinals_master_data.csv  prompts.yaml
docs/: CURRENT_IMPLEMENTATION_STATUS.md  DOCUMENTATION.md  LOCAL_LLM_SETUP.md  NETWORK_INTEGRATION_OPTIONS.md  UTILITY_BASED_GROUPING.md  VISUALIZATION_SUITE.md  conclave_env_refactoring_analysis.md  config_refactoring_plan.md  logging_strategy.md  redundancy_analysis_report.md  refactoring_and_simplification_suggestions.md  refactoring_plan_consolidated.md  vaiable_glossary.md
network/: generate_bocconi_network.py  network.py  network_utils.py
openrouter_distribute_full/: generate_tree.sh
parser/: cardinal-info-parser.ipynb  cardinals_info.csv
results/: combined_results_snellius.csv
scripts/: __init__.py  generate_bocconi_network.py  generate_cardinals_csv.py  generate_predefined_groups.py  pca_analysis_demo.py  voting_analysis.py
simulations/: __init__.py  discussion_round.py  multi_round.py  multi_voting.py  run.py  single_round.py
(+173 files in other folders)
