[project]
name = "conclave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.7.0",
    "beautifulsoup4>=4.13.4",
    "matplotlib>=3.9.4",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "protobuf>=6.31.1",
    "psutil>=7.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.3",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.46.0",
]

[tool.setuptools.packages.find]
include = ["conclave*"]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
