[project]
name = "conclave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.7.0",
    "beautifulsoup4>=4.13.4",
    "matplotlib>=3.9.4",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "protobuf>=6.31.1",
    "psutil>=7.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.46.0",
    "umap-learn>=0.5.7",
]

[tool.setuptools.packages.find]
include = ["conclave*"]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
